@@ -23,7 +23,6 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Ordering;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -70,22 +69,16 @@ public final class SecurityStandards {
     SANS_TOP_25_POROUS_DEFENSES, POROUS_CWE);
 
   // https://cwe.mitre.org/top25/archive/2019/2019_cwe_top25.html
-  public static final List<String> CWE_TOP25_2019 =
-    Collections.unmodifiableList(asList("119", "79", "20", "200", "125", "89", "416", "190", "352",
-      "22", "78", "787", "287", "476", "732", "434", "611", "94",
-      "798", "400", "772", "426", "502", "269", "295"));
+  public static final List<String> CWE_TOP25_2019 = List.of("119", "79", "20", "200", "125", "89", "416", "190", "352", "22", "78", "787", "287", "476",
+        "732", "434", "611", "94", "798", "400", "772", "426", "502", "269", "295");
 
   // https://cwe.mitre.org/top25/archive/2020/2020_cwe_top25.html
-  public static final List<String> CWE_TOP25_2020 =
-    Collections.unmodifiableList(asList("79", "787", "20", "125", "119", "89", "200", "416", "352",
-      "78", "190", "22", "476", "287", "434", "732", "94", "522",
-      "611", "798", "502", "269", "400", "306", "862"));
+  public static final List<String> CWE_TOP25_2020 = List.of("79", "787", "20", "125", "119", "89", "200", "416", "352", "78", "190", "22", "476", "287",
+      "434", "732", "94", "522", "611", "798", "502", "269", "400", "306", "862");
 
   // https://cwe.mitre.org/top25/archive/2021/2021_cwe_top25.html
-  public static final List<String> CWE_TOP25_2021 =
-    Collections.unmodifiableList(asList("787", "79", "125", "20", "78", "89", "416", "22", "352",
-      "434", "306", "190", "502", "287", "476", "798", "119", "862",
-      "276", "200", "522", "732", "611", "918", "77"));
+  public static final List<String> CWE_TOP25_2021 = List.of("787", "79", "125", "20", "78", "89", "416", "22", "352", "434", "306", "190", "502", "287", "476",
+    "798", "119", "862", "276", "200", "522", "732", "611", "918", "77");
 
   public static final Map<String, List<String>> CWES_BY_CWE_TOP_25 = Map.of(
     "2019", CWE_TOP25_2019,
